added security services and user entity